--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 .zen-sub-journey-container {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   min-width: 300px;
 }
 
@@ -74,4 +75,15 @@
   width: 100%;
   height: 100%;
   background-color: aquamarine;
+}
+
+/* NAVBAR PROFILE CIRCLE */
+.profile-circle {
+  width: 50px;
+  height: 50px;
+  background-color: aquamarine;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
